--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "gulp": "^5.0.1",
     "web3": "^4.10.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^3.0.4"
   }
 }
